# chess

./: ARCHITECTURE.md  BENCHMARKING.md  Cargo.toml  DESIGN_DOC.md  HUMANLIKE_AGENT.md  MCTS_TACTICAL_PRIORITY.md  README.md  TRAINING_GUIDE.md  engine.py  notes  run_validation_experiments.sh  test_tactical_mcts  test_tactical_mcts.rs
python/: README.md  chess_net.py  data_collection.py  train_chess_ai.py  training_pipeline.py
src/: agent.rs  alpha_beta.rs  arena.rs  bitboard.rs  bits.rs  board.rs  board_utils.rs  boardstack.rs  egtb.rs  eval.rs  eval_constants.rs  gen_moves.rs  hash.rs  lib.rs  magic_bitboard.rs  magic_constants.rs  main.rs  make_move.rs  move_gen.rs  move_generation.rs  move_types.rs  piece_types.rs  search.rs  transposition.rs  uci.rs  utils.rs
src/benchmarks/: elo_estimation.rs  mod.rs  performance.rs  strength_testing.rs  tactical_suite.rs
src/board/: bitboards.rs  mod.rs
src/eval/: mod.rs  pesto.rs
src/mcts/: mod.rs  neural_mcts.rs  nn_counter.rs  node.rs  policy.rs  selection.rs  simulation.rs  tactical.rs  tactical_mcts.rs
src/search/: alpha_beta.rs  history.rs  iterative_deepening.rs  mate_search.rs  mod.rs  quiescence.rs  see.rs
src/training/: mod.rs
src/tuning/: data_loader.rs  mod.rs  texel.rs
tests/: bitboard_tests.rs  eval_basic_tests.rs  eval_pawn_structure_tests.rs  eval_piece_bonus_tests.rs  eval_rook_tests.rs  eval_test_utils.rs  eval_tests.rs  make_move_tests.rs  mcts_tests.rs  move_generation_tests.rs  perft_tests.rs  repetition_tests.rs  search_heuristics_tests.rs  search_tests.rs  tactical_mcts_tests.rs  time_tests.rs
(+3 files in other folders)
